--- a/souleymane.html
+++ b/souleymane.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <title>HYPERCARS</title>
     <link rel="stylesheet" href="souley.css">
+    <br>
     <h1>HYPERCARS</h1>
+    <nav class="nav-bar">
+        <ul>
+            <li><a href="souleymane.html">Home</a></li>
+            <li><a href="koenigsegg.html">Koenigsegg</a></li>
+            <li><a href="buggati.html">Buggatti</a></li>
+            <li><a href="ferrari.html">Ferrari</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h3> Welcome to my website about cars </h3>
+    </main>
+   
+    <hr>
 <p>hypercars are not just your normal everyday car,they surpass <br>
     the limits, and only the very rich can get their hands on. These cars <br>are known around the world for their price, looks, and their performance</p>
-<img class="img" src ="Downloads/koeni.png">
-<img class="img" src="Downloads/Bugatti_logo.svg.png">
-<img class="img" src="Downloads/ferrarrr.png">
 
-<div class="road">
-    <img src="Downloads/road-split.jpeg" >
-    <img src="Downloads/road-split (1).jpeg" >
-</div>
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
