--- a/souleymane.html
+++ b/souleymane.html
@@ -19,9 +19,15 @@
     </main>
    
     <hr>
-<p>hypercars are not just your normal everyday car,they surpass <br>
-    the limits, and only the very rich can get their hands on. These cars <br>are known around the world for their price, looks, and their performance</p>
-<p>Click on the taskbar on to check out some of the top three cars I like.</p>
+<p> Hypercars are not just your normal everyday car, they surpass <br>
+    the limits and only the very rich can get their hands on them. These cars <br>are known around the world for their price, looks, and their performance</p>
+<p>Click on the taskbar to check out some of the top three cars I like.</p>
+    <p> The cars I will be talking about are  </p>
+    <ul>
+        <li>Bugatti</li>
+        <li>koenigseg</li>
+        <li>ferrari</li>
+    </ul>
 
 
 
